# goodnavigate

./: GoodNavigate.py  README.md  pyproject.toml
src/: GoodNavigate.py
src/goodnavigate/: __init__.py
